update dark mode features and fix UI issue

--- a/src/pages/Home/css/style.scss
+++ b/src/pages/Home/css/style.scss
@@ -56,6 +56,7 @@ body {
   > ul {
     display: flex;
     gap: 40px;
+    align-items: center;
 
     li {
       list-style-type: none;
